--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js --ignore __tests__",
+    "dev": "nodemon src/server.js --inspect --ignore __tests__",
     "pretest": "cross-env NODE_ENV=test sequelize db:migrate",
     "test": "cross-env NODE_ENV=test jest",
     "posttest": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
