--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "express-jwt": "^5.3.1",
     "factory-girl": "^5.0.4",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "node-uuid": "^1.4.8",
     "pg": "^7.17.1",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
+    "swagger-ui-express": "^4.1.3",
     "util": "^0.12.1"
   },
   "devDependencies": {
