--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "faker": "^4.1.0",
     "jest": "^25.1.0",
+    "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "sqlite": "^3.0.3",
     "supertest": "^4.0.2"
