--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "factory-girl": "^5.0.4",
+    "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
@@ -26,6 +27,7 @@
     "pg": "^7.17.1",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
+    "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "util": "^0.12.1"
   },
