--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
+    "multer": "^1.4.2",
     "node-uuid": "^1.4.8",
     "pg": "^7.17.1",
     "sequelize": "^5.21.3",
