--- a/.env
+++ b/.env
@@ -2,7 +2,15 @@ APP_URL=http://localhost:3000
 APP_SECRET=testejwt
 APP_PORT=3000
 APP_HOST_IP=0.0.0.0
-DB_HOST=127.0.0.1
-DB_USER=vendadireta
-DB_PASS=vendadireta
-DB_NAME=backend_node
+
+DB_DIALECT=sqlite
+
+//APP_URL=http://localhost:3000
+//PP_SECRET=testejwt
+//APP_PORT=3000
+//APP_HOST_IP=0.0.0.0
+
+//DB_HOST=127.0.0.1
+//DB_USER=vendadireta
+//DB_PASS=vendadireta
+//DB_NAME=backend_node
