--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ APP_PORT=3000
 APP_HOST_IP=0.0.0.0
 
 DB_DIALECT=sqlite
+DB_SQLITE_STORAGE='./tmp/database-prod.sqlite'
 
 //APP_URL=http://localhost:3000
 //PP_SECRET=testejwt
