--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "util": "^0.12.1",
-    "sqlite": "^3.0.3",
+    "sqlite": "^3.0.3"
   },
   "devDependencies": {
     "faker": "^4.1.0",
