--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "util": "^0.12.1",
-    "sqlite": "^3.0.3"
+    "sqlite": "^3.0.3",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "faker": "^4.1.0",
     "jest": "^25.1.0",
-    "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   }
